src/styles/upload.css
/* ... */
.color-section__heading::before {
  content: "";
  display: block;
  width: 9px;
  height: 13px;
  margin: 0 12px 0 0;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url("/Images/droplet.svg");
}

.color-picker {
  list-style: none;
  display: flex;
  padding: 0;
  align-items: center;
  margin: 12px 0 20px 0;
}

.color-picker-item {
  position: relative;
  width: 30px;
  height: 30px;
  border: 3px white solid;
  display: inline-block;
  border-radius: 9999px;
  box-sizing: content-box;
  background-clip: content-box;
  padding: 3px;
}

.color-picker-item:hover {
  background-color: #f3f2ed;
  border: 3px #e4e4e4 solid;
}

.color-picker-item--selected:hover {
  border: 3px #0043e0 solid;
}

.color-picker-item--selected {
  border: 3px #0043e0 solid;
}

.color-picker-item-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.color-picker-item-container:not(:first-child) {
  margin-left: 18px;
}

.color-picker-item .color-picker-item__tooltip {
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.3s;

  background-color: white;

  padding: 4px 8px;
  border-radius: 4px;
  border: 1px #e7e7e7 solid;

  color: black;
  font-size: 12px;
  font-weight: 400;
  line-height: 18.5px;
  text-align: center;
  text-wrap: nowrap;

  position: absolute;
  z-index: 1;
  top: 45px;
  left: 30px;
}
.color-picker-item:hover .color-picker-item__tooltip {
  visibility: visible;
  opacity: 1;
}

.generate-btn {
  margin: 20px 0 0 0;
  padding: 8px 50px;
  width: 100%;
  background: var(--black);
  border-radius: 100px;
  font-weight: 700;
  font-size: 14px;
  line-height: 155.1%;
  text-align: center;
  color: var(--white);
}
.generate-btn:disabled {
  background: var(--gray-4);
}
.generate-btn:not(:disabled):hover {
  cursor: pointer;
}

.device-info {
  margin: 20px 20px 0 20px;
  padding: 20px;
  background: var(--white);
  border: 1px solid var(--gray-5);
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
  border-radius: 10px;
}
@media (min-width: 992px) {
  .device-info {
    margin: 0;
  }
}

.device-support::after {
  content: "";
  display: block;
  margin: 20px -20px 0 -20px;
  width: calc(100% + 40px);
  border-bottom: 1px solid var(--gray-5);
}

.device-support__heading {
  display: flex;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
}
.device-support__heading::before {
  content: "";
  display: block;
  width: 15px;
  height: 15px;
  margin: 0 10px 0 0;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url("/Images/device-support.svg");
}

.device-support__orientation-list {
  list-style: none;
  display: flex;
  margin: 15px 0 0 0;
  padding: 0;
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.device-support__orientation-list::-webkit-scrollbar {
  display: none;
}
@media (min-width: 992px) {
  .device-support__orientation-list {
    flex-wrap: wrap;
    margin: 5px 0 0 -10px;
  }
}

.device-support__orientation-image {
  width: 90px;
  height: 90px;
  padding: 10px;
  object-fit: contain;
  background: var(--white);
}
.device-support__orientation-image:not(:first-child) {
  margin: 0 0 0 10px;
}
@media (min-width: 992px) {
  .device-support__orientation-image {
    margin: 10px 0 0 10px;
  }
  .device-support__orientation-image:not(:first-child) {
    margin: 10px 0 0 10px;
  }
}

.device-credits {
  padding: 20px 0 0 0;
}

.device-credits__heading {
  display: flex;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
}
.device-credits__heading::before {
  content: "";
  display: block;
  width: 15px;
  height: 15px;
  margin: 0 10px 0 0;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url("/Images/device-credits.svg");
}

.device-credits__desc p {
  margin: 10px 0 0 0;
}

.device-credits__desc a {
  font-size: 14px;
  text-decoration-line: underline;
  color: var(--black);
}

.request-device-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 20px 20px 0 20px;
  height: 295px;
  background: var(--white);
  border: 1px solid var(--gray-5);
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
  border-radius: 10px;
}
@media (min-width: 992px) {
  .request-device-section {
    margin: 20px 0 0 0;
  }
}

.request-device-section__image {
  display: block;
  width: 190px;
  height: auto;
}

.request-device-section__desc {
  margin: 20px 0 0 0;
  font-weight: bold;
  font-size: 14px;
  text-align: center;
  color: var(--black);
}

.request-device-section__request-link {
  display: block;
  margin: 10px 0 0 0;
}

.request-device-section__request-btn {
  display: block;
  padding: 8px 14px;
  text-align: center;
  border-radius: 100px;
  background: var(--black);
  color: var(--white);
  font-weight: bold;
  font-size: 14px;
}
.request-device-section__request-btn:hover {
  cursor: pointer;
}

.generating-modal {
  z-index: 200;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.generating-modal__overlay {
  height: 100%;
  width: 100%;
  background-color: var(--black);
  opacity: 0.6;
}

.generating-modal-dialog {
  position: fixed;
  top: calc(50vh - 145px);
  left: calc(50vw - 145px);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 290px;
  height: 290px;
  background-color: var(--white);
  border-radius: 10px;
}

.generating-modal__spinner::before {
  content: "";
  display: block;
  width: 90px;
  height: 90px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url("/Images/spinner-blue.png");
  animation: spin 1s linear infinite;
}

.generating-modal-dialog__text {
  margin: 35px 0 0 0;
  color: var(--gray-1);
  font-weight: 700;
  font-size: 24px;
}
/* ... */

